--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
-#TERRAFORM_DIR=
-#FLASK_EXPOSE_PORT=
-#FLASK_EXPOSE_HOST=
+FLASK_EXPOSE_PORT=7000
+FLASK_EXPOSE_HOST=0.0.0.0
+
+TERRAFORM_DIR=/app/terraform
+
+AWS_ACCESS_KEY_ID=
+AWS_SECRET_ACCESS_KEY=
+AWS_DEFAULT_REGION=ap-southeast-2
